[project]
name = "astro-dn"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "tqdm>=4.66",
    "astropy>=6.1",
    "astroquery>=0.4",
    "numpy>=2.0",
    "ruff>=0.5",
    "matplotlib>=3.10",
    "seaborn>=0.13",
]

[build-system]
requires = ["setuptools >= 70.0", "setuptools-scm >= 8.0.1"]
build-backend = "setuptools.build_meta"

[project.scripts]
astrodn = "astrodn:__main__"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I", "D", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
